# from
# https://github.com/duarteocarmo/boilerplate

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [build-system]
# requires = ["setuptools", "setuptools-scm"]
# build-backend = "setuptools.build_meta"

[project]
name = "dash_templates"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
  "dash>=2.10.0",
  "dash-mantine-components>=0.12.1",
  "dash-iconify>=0.1.2",
]

[project.optional-dependencies]
dev = ["pytest", "black==23.11.0", "ruff==0.1.6"]

[tool.ruff]
ignore = ["E501"]
select = ["E", "F", "I", "W"]
line-length = 88
fixable = ["I"]
exclude = [".env", ".venv", "venv", "notebooks"]
show-source = true

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.black]
line-length = 88
extend-exclude = '''
/(
  | .env
  | .venv
  | venv
  | notebooks
)/
'''
